backend/nodejs/nodejs-prisma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs
  labels:
    app: nodejs
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
      tier: backend
  template:
    metadata:
      labels:
        app: nodejs
        tier: backend
    spec:
      containers:
        - name: nodejs
          image: ngoyarzo/nodejs-prisma:latest
          command: ["node", "index.js"]
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: prisma-modules
              mountPath: /app/node_modules
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5

      volumes:
        - name: prisma-modules
          emptyDir: {}
