backend/nodejs/nodejs-prisma-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-prisma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-prisma
  template:
    metadata:
      labels:
        app: nodejs-prisma
    spec:
      containers:
        - name: nodejs
          image: ngoyarzo/nodejs-prisma:2.0
          volumeMounts:
            - name: data
              mountPath: /app/node_modules  # Evita sobrescribir en bind mounts (solo desarrollo)
    volumes:
      - name: data
        emptyDir: {}  # Volumen temporal para node_modules
