backend/nodejs/nodejs-prisma-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-prisma-svc
  labels:
    app: nodejs
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: nodejs
    tier: backend
  ports:
    - port: 3001
      targetPort: 3001
